--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "notistack": "^0.8.9",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
