--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@material-ui/lab": "^4.0.0-alpha.23",
     "@material-ui/pickers": "^3.2.2",
     "@material-ui/styles": "^4.3.0",
+    "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
     "mdi-material-ui": "^6.3.0",
     "notistack": "^0.8.9",
