--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
     "mdi-material-ui": "^6.3.0",
+    "moment": "^2.24.0",
     "notistack": "^0.8.9",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
