--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     ]
   },
   "dependencies": {
+    "@matejmazur/react-katex": "^3.0.2",
+    "@matejmazur/react-mathjax": "^0.1.10",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.23",
     "@material-ui/pickers": "^3.2.2",
     "@material-ui/styles": "^4.3.0",
     "connected-react-router": "^6.5.2",
+    "highlight.js": "^9.15.10",
     "history": "^4.9.0",
+    "katex": "^0.11.1",
     "mdi-material-ui": "^6.3.0",
     "moment": "^2.24.0",
     "notistack": "^0.8.9",
@@ -42,6 +46,8 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-observable": "^1.1.0",
+    "remark-math": "^2.0.0",
+    "remark-parse": "^7.0.1",
     "rxjs": "^6.5.2",
     "socket.io-client": "^2.2.0"
   },
