--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@material-ui/pickers": "^3.2.2",
     "@material-ui/styles": "^4.3.0",
     "connected-react-router": "^6.5.2",
+    "copy-to-clipboard": "^3.2.0",
     "highlight.js": "^9.15.10",
     "history": "^4.9.0",
     "katex": "^0.11.1",
