--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Online CO-Comment Documents Sharing System",
+  "name": "Sharing Docs",
   "short_name": "Sharing Docs",
   "theme_color": "#4596ec",
   "background_color": "#fafafa",
